working crud for projects, no comments yet
